--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "A Python web scraping framework"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "requests>=2.32.5",
+]
 
 [project.optional-dependencies]
 dev = [
@@ -17,7 +19,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/bald_spider"]
+packages = ["bald_spider"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
