--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
        "editor.formatOnType": true,
        "editor.defaultFormatter": "ms-python.black-formatter"
    },
-   "black-formatter.args": ["--line-length", "120"]
+"black-formatter.args": [
+    "--line-length",
+    "120"
+],
+"python.REPL.enableREPLSmartSend": false
 }
