--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "requests>=2.32.5",
+    "ujson>=5.11.0",
 ]
 
 [project.optional-dependencies]
