--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A Python web scraping framework"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "parsel>=1.10.0",
     "requests>=2.32.5",
     "ujson>=5.11.0",
 ]
