--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "aiohttp>=3.13.2",
+    "httpx>=0.28.1",
     "parsel>=1.10.0",
     "requests>=2.32.5",
     "ujson>=5.11.0",
